# Zanzalu-workshop-chat-example

./: README.md
chat/: Cargo.toml
chat/src/: main.rs
