[package]
name = "chat-example"
version = "0.1.0"
edition.workspace = true
publish = false
license = "MIT"

[package.metadata.release]
release = false

[dependencies]
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
libp2p = { path = "../../libp2p", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
